fix message not present in bundle leads to silent error

--- a/locale/en-US/instasaver.properties
+++ b/locale/en-US/instasaver.properties
@@ -8,3 +8,4 @@ no_login=Please provide Instapaper login credentials
 400=Problem contacting the Instapaper service
 500=Instapaper service not available 
 403=Invalid user or password
+0=No network connection
