--- a/locale/it-IT/instasaver.properties
+++ b/locale/it-IT/instasaver.properties
@@ -8,3 +8,4 @@ no_login=Nome utente non inserito
 400=Errore nella richiesta ad Instapaper
 500=Servizio Instapaper momentaneamente indisponibile
 403=Utente o password non validi
+0=Nessuna connessione ad internet
